--- a/assent/styles.css
+++ b/assent/styles.css
@@ -6,5 +6,20 @@
     border-radius: 12px;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
     background-color: #2b78c1;
-    
+
+}
+
+.formulario input, .formulario button{
+    width: 95%;
+    padding: 10px;
+    margin: 10px;
+}
+
+.ver-imagen{
+    width: 120px;
+    height: 120;
+    border-radius: 10px;
+    display: block;
+    margin: 10px auto;
+    border: 2px solid #ccc;
 }
