--- a/assent/styles.css
+++ b/assent/styles.css
@@ -41,3 +41,14 @@ nav ul li{
     display: inline;
     margin-right: 20px;
 }
+
+nav ul li a{
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    display: inline-block;
+}
+
+nav ul li a:hover{
+    background-color: #555;
+}
